...
    <string name="video_recommendations">Video recommendations</string>
    <string name="video_recommendations_summary">Get recommended videos on the home screen</string>
    <string name="preferred_search_engine">Preferred search engine</string>
    <string name="preferred_search_engine_summary">The search engine to use for in-app searches</string>
    <string name="format_filtering_hint">All items must be of the same type to use this option</string>
    <string name="preferred_home_screen">Preferred home screen</string>
    <string name="undo">Undo</string>
    <string name="format_id">Format ID</string>
    <string name="codec">Codec</string>
    <string name="audio_samplerate">Audio sample rate</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="Theme">Theme</string>
    <string name="dark">Dark</string>
...
